--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
     </div>
 </section>
 
-<section class="header3 cid-sfzkFMC76y" id="header3-2j">
+<section class="header3 cid-sfzkFMC76y" data-bg-video="https://www.youtube.com/watch?v=RoCrsMbwVWE" id="header3-2j">
 
     
 
-    
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);">
+    </div>
 
     <div class="container">
         <div class="media-container-row">
@@ -115,7 +116,7 @@
 <br>
 <br>Mein Stil ist größtenteils impressionistisch, wurde jedoch in letzter Zeit an den Surrealismus angepasst, eine Maltechnik, die es dem Unbewussten ermöglicht, sich auszudrücken. Die abstrakte Arbeit ist normalerweise eine geplante Komposition, die rational und ruhig ist, wobei die Aufregung von der Spannung herrührt, die zwischen den Farben und Formen aufgebaut wird. Ich experimentiere auch mit verschiedenen Techniken mit Pinseln, Spachteln, Schwämmen und sogar meinen Fingern. Neben Öl, Acryl oder Wasserfarbe verwende ich auch gerne andere Medien wie Strukturpaste, Blattgold und Collagen speziell für meine abstrakte Arbeit. 
 <br>
-<br>Ich möchte die Erfahrung des Malens von Geschichten und der Einbeziehung von Emotionen in meine Arbeit erweitern...&nbsp;</em></p>
+<br>Ich möchte die Erfahrung des Malens von Geschichten und der Einbeziehung von Emotionen in meine Arbeit erweitern.&nbsp;</em></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="index.html#testimonials5-c">Rerenzen</a></div>
             </div>
@@ -185,7 +186,7 @@
                 </div>
             </div></div>
     </div>   
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/c" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/a" style="color:#aaa;">Mobirise</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/d" style="color:#aaa;">This website</a> was created with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
