--- a/page4.html
+++ b/page4.html
@@ -56,7 +56,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">
-                        WILKOMMEN</a>
+                        WILLKOMMEN</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">
                         KATALOG</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page6.html">PORTFOLIO</a></li>
                 <li class="nav-item">
@@ -86,7 +86,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5zbOpSj+J2EpuszAUuuOQDdZ75zcIO98t6/N0tRHC/ap/emmmwpY6zLJ37sM+Po6dG9YCo2WdiNaVwospYchoERbPeVmwrZN4nIU4dm0XK7NPqSgQTO/8+8SvZ0OAlA5">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vuDLEAy9bulHh4I+3mr7wzB558wQbu3PyIhX6mzBGx1k0uH1hDjQUVaixQw1zcOHOIdqrSOTH5WeVWowE1cpihligRiQed6XwBVwZJLJRLinInqzk0EQ0ENIRObLrH/p">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
